--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Track Counter</title>
     <link rel="shortcut icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./style.css">
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-82547706-8', 'auto');
+		ga('send', 'pageview');
+	</script>
 </head>
 <body>
     <noscript><h1>Enable JavaScript</h1></noscript>
