--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="macovogames">
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:site" content="@macovogames" />
+<meta name="twitter:title" content="Evil Counter" />
+<meta name="twitter:description" content="Easy Counter. It's So Easy It's Evil!" />
+<meta name="twitter:image" content="https://evilcounter.tk/social.jpg" />
     <title>Evil Counter</title>
     <link rel="shortcut icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./style.css">
