--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <meta name="twitter:title" content="Evil Counter" />
 <meta name="twitter:description" content="Easy Counter. It's So Easy It's Evil!" />
 <meta name="twitter:image" content="https://evilcounter.tk/social.jpg" />
+<meta property="og:title" content="Evil Counter" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://evilcounter.tk" />
+<meta property="og:image" content="https://evilcounter.tk/social.jpg" />
+<meta property="og:description" content="Easy Counter. It's So Easy It's Evil!" />
+	  
     <title>Evil Counter</title>
     <link rel="shortcut icon" href="./favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./style.css">
