--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Easy Counter. It's So Easy It's Evil!">
     <meta name="author" content="macovogames">
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@macovogames" />
