--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Easy Counter. It's So Easy It's Evil!">
-    <meta name="author" content="macovogames">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="Easy Counter. It's So Easy It's Evil!">
+<meta name="author" content="macovogames">
 <meta name="google-site-verification" content="2aUfyE7ycCybT4tuTAtNYzCTZfatb7lsfz3n6vcxtDU" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@macovogames" />
@@ -16,21 +16,27 @@
 <meta property="og:url" content="https://evilcounter.tk" />
 <meta property="og:image" content="https://evilcounter.tk/social.jpg" />
 <meta property="og:description" content="Easy Counter. It's So Easy It's Evil!" />
-    <title>Evil Counter</title>
-    <link rel="shortcut icon" href="./favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="./style.css">
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-		ga('create', 'UA-82547706-8', 'auto');
-		ga('send', 'pageview');
-	</script>
+<link rel="apple-touch-icon" href="social.jpg">
+<meta name="application-name" content="Evil Counter"/>
+<meta name="msapplication-square70x70logo" content="social.jpg"/>
+<meta name="msapplication-square150x150logo" content="social.jpg"/>
+<meta name="msapplication-square310x310logo" content="social.jpg"/>
+<meta name="msapplication-TileColor" content="#e03a3a"/>
+<title>Evil Counter</title>
+<link rel="shortcut icon" href="./favicon.ico" />
+<link rel="stylesheet" type="text/css" href="./style.css">
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-82547706-8', 'auto');
+ga('send', 'pageview');
+</script>
 </head>
 <body>
-    <noscript><h1>Enable JavaScript</h1></noscript>
-    <h1 id="CounterNumber">0</h1>
-    <script src="./script.js" type="text/javascript"></script>
+<noscript><h1>Enable JavaScript</h1></noscript>
+<h1 id="CounterNumber">Press Space</h1>
+<script src="./script.js" type="text/javascript"></script>
 </body>
 </html>
