--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Easy Counter. It's So Easy It's Evil!">
 <meta name="author" content="macovogames">
 <meta name="google-site-verification" content="2aUfyE7ycCybT4tuTAtNYzCTZfatb7lsfz3n6vcxtDU" />
@@ -18,10 +18,11 @@
 <meta property="og:description" content="Easy Counter. It's So Easy It's Evil!" />
 <link rel="apple-touch-icon" href="social.jpg">
 <meta name="application-name" content="Evil Counter"/>
-<meta name="msapplication-square70x70logo" content="social.jpg"/>
-<meta name="msapplication-square150x150logo" content="social.jpg"/>
-<meta name="msapplication-square310x310logo" content="social.jpg"/>
-<meta name="msapplication-TileColor" content="#e03a3a"/>
+<meta name="msapplication-square70x70logo" content="wp/small.jpg"/>
+<meta name="msapplication-square150x150logo" content="wp/medium.jpg"/>
+<meta name="msapplication-wide310x150logo" content="wp/wide.jpg"/>
+<meta name="msapplication-square310x310logo" content="wp/large.jpg"/>
+<meta name="msapplication-TileColor" content="#c94545"/>
 <title>Evil Counter</title>
 <link rel="shortcut icon" href="./favicon.ico" />
 <link rel="stylesheet" type="text/css" href="./style.css">
