--- a/index.html
+++ b/index.html
@@ -10,22 +10,23 @@
 <meta name="twitter:site" content="@macovogames" />
 <meta name="twitter:title" content="Evil Counter" />
 <meta name="twitter:description" content="Easy Counter. It's So Easy It's Evil!" />
-<meta name="twitter:image" content="https://evilcounter.tk/social.jpg" />
+<meta name="twitter:image" content="https://evilcounter.tk/img/social.jpg" />
 <meta property="og:title" content="Evil Counter" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://evilcounter.tk" />
-<meta property="og:image" content="https://evilcounter.tk/social.jpg" />
+<meta property="og:image" content="https://evilcounter.tk/img/social.jpg" />
 <meta property="og:description" content="Easy Counter. It's So Easy It's Evil!" />
-<link rel="apple-touch-icon" href="social.jpg">
+<link rel="apple-touch-icon" href="img/social.jpg">
 <meta name="application-name" content="Evil Counter"/>
-<meta name="msapplication-square70x70logo" content="wp/small.jpg"/>
-<meta name="msapplication-square150x150logo" content="wp/medium.jpg"/>
-<meta name="msapplication-wide310x150logo" content="wp/wide.jpg"/>
-<meta name="msapplication-square310x310logo" content="wp/large.jpg"/>
+<meta name="msapplication-square70x70logo" content="img/wp/small.jpg"/>
+<meta name="msapplication-square150x150logo" content="img/wp/medium.jpg"/>
+<meta name="msapplication-wide310x150logo" content="img/wp/wide.jpg"/>
+<meta name="msapplication-square310x310logo" content="img/wp/large.jpg"/>
 <meta name="msapplication-TileColor" content="#c94545"/>
 <title>Evil Counter</title>
 <link rel="shortcut icon" href="./favicon.ico" />
-<link rel="stylesheet" type="text/css" href="./style.css">
+<link rel="stylesheet" type="text/css" href="./css/animate.css">
+<link rel="stylesheet" type="text/css" href="./css/style.css">
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -37,7 +38,7 @@ ga('send', 'pageview');
 </head>
 <body>
 <noscript><h1>Enable JavaScript</h1></noscript>
-<h1 id="CounterNumber">Press Space</h1>
-<script src="./script.js" type="text/javascript"></script>
+<h1 id="CounterNumber" class="hide">Press Space</h1>
+<script src="./js/script.js" type="text/javascript"></script>
 </body>
 </html>
