--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <title>Page Not Found</title>
     <link rel="shortcut icon" href="./favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
