--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ ga('send', 'pageview');
 </head>
 <body>
 <noscript><h1>Enable JavaScript</h1></noscript>
+<img id="loader" src="img/loader.gif">
 <h1 id="CounterNumber" class="hide">Press Space</h1>
 <script src="./js/script.js" type="text/javascript"></script>
 </body>
