--- a/index.html
+++ b/index.html
@@ -1,45 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Easy Counter. It's So Easy It's Evil!">
-<meta name="author" content="macovogames">
-<meta name="google-site-verification" content="2aUfyE7ycCybT4tuTAtNYzCTZfatb7lsfz3n6vcxtDU" />
-<meta name="twitter:card" content="summary" />
-<meta name="twitter:site" content="@macovogames" />
-<meta name="twitter:title" content="Evil Counter" />
-<meta name="twitter:description" content="Easy Counter. It's So Easy It's Evil!" />
-<meta name="twitter:image" content="https://evilcounter.tk/img/social.jpg" />
-<meta property="og:title" content="Evil Counter" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://evilcounter.tk" />
-<meta property="og:image" content="https://evilcounter.tk/img/social.jpg" />
-<meta property="og:description" content="Easy Counter. It's So Easy It's Evil!" />
-<link rel="apple-touch-icon" href="img/social.jpg">
-<meta name="application-name" content="Evil Counter"/>
-<meta name="msapplication-square70x70logo" content="img/wp/small.jpg"/>
-<meta name="msapplication-square150x150logo" content="img/wp/medium.jpg"/>
-<meta name="msapplication-wide310x150logo" content="img/wp/wide.jpg"/>
-<meta name="msapplication-square310x310logo" content="img/wp/large.jpg"/>
-<meta name="msapplication-TileColor" content="#c94545"/>
-<title>Evil Counter</title>
-<link rel="shortcut icon" href="./favicon.ico" />
-<link rel="stylesheet" type="text/css" href="./css/animate.css">
-<link rel="stylesheet" type="text/css" href="./css/style.css">
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-82547706-8', 'auto');
-ga('send', 'pageview');
-</script>
-</head>
-<body>
-<noscript><h1>Enable JavaScript</h1></noscript>
-<img id="loader" src="img/loader.gif">
-<h1 id="CounterNumber" class="hide">Press Space</h1>
-<script src="./js/script.js" type="text/javascript"></script>
-</body>
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="utf-8"> <meta name="viewport" content="width=device-width, initial-scale=1"> <meta name="description" content="Easy Counter. It's So Easy It's Evil!"> <meta name="author" content="macovogames"> <meta name="google-site-verification" content="2aUfyE7ycCybT4tuTAtNYzCTZfatb7lsfz3n6vcxtDU" /> <meta name="twitter:card" content="summary" /> <meta name="twitter:site" content="@macovogames" /> <meta name="twitter:title" content="Evil Counter" /> <meta name="twitter:description" content="Easy Counter. It's So Easy It's Evil!" /> <meta name="twitter:image" content="https://evilcounter.tk/img/social.jpg" /> <meta property="og:title" content="Evil Counter" /> <meta property="og:type" content="website" /> <meta property="og:url" content="https://evilcounter.tk" /> <meta property="og:image" content="https://evilcounter.tk/img/social.jpg" /> <meta property="og:description" content="Easy Counter. It's So Easy It's Evil!" /> <link rel="apple-touch-icon" href="img/social.jpg"> <meta name="application-name" content="Evil Counter"/> <meta name="msapplication-square70x70logo" content="img/wp/small.jpg"/> <meta name="msapplication-square150x150logo" content="img/wp/medium.jpg"/> <meta name="msapplication-wide310x150logo" content="img/wp/wide.jpg"/> <meta name="msapplication-square310x310logo" content="img/wp/large.jpg"/> <meta name="msapplication-TileColor" content="#c94545"/> <title>Evil Counter</title> <link rel="shortcut icon" href="./favicon.ico" /> <link rel="stylesheet" type="text/css" href="./css/animate.css"> <link rel="stylesheet" type="text/css" href="./css/style.css"> <script>!function(e,t,a,n,c,s,o){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments)},e[c].l=1*new Date,s=t.createElement(a),o=t.getElementsByTagName(a)[0],s.async=1,s.src=n,o.parentNode.insertBefore(s,o)}(window,document,"script","https://www.google-analytics.com/analytics.js","ga"),ga("create","UA-82547706-8","auto"),ga("send","pageview");</script> </head> <body> <noscript><h1>Enable JavaScript</h1></noscript> <img id="loader" src="img/loader.gif"> <h1 id="CounterNumber" class="hide">Press Space</h1> <script src="./js/script.js" type="text/javascript"></script> </body> </html>
